[tool.poetry]
name = "qlikview_api"
version = "0.1.0"
description = "Module provides a high level API to working with QlikView windows client."
authors = ["Danila Kritsky <danilakritsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
comtypes = "^1.1.13"
pywinauto = "^0.6.8"
pywin32 = "^304"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
